
0.86 - IOError now displays error message

0.85 - update "fisher:" to work again

0.84 - update "test-counts:" to work with recent edgeR

0.83 - bugfix reading seqeucnes from gff3 file
       nesoni.config parameters now have "affects_output" flag, Execute tool now uses this

0.82 - "clip:" can take a file of adaptors, or use builtin list (updated).
       "clip:" retains read descriptions (Illumina reads now include useful information in description).
       "clip:" checks for non-duplicate read names.

0.81 - Fix small bug reading GFF files

0.80 - more concise encoding of treemaker Counting_store (incompatible with previous versions! existing stores, eg kmer bags, need to be remade)
       Update "core:"
       Update "shred:"
       "parameters" file now written in JSON format
       kmer tools no longer depend on Cython (oops)
       R: write.grouped.table added       

0.79 - Futures are picklable
       Basic cluster support

0.78 - Fix clip to accept interleaved files
       "shrimp" checks for reads with duplicate names (eg pairs in reads section)

0.77 - R function to load table with grouped columns
       plot-counts: updated

0.76 - multiplot function added to R library
       core: partially updated
       Stage class added to legion module

0.75 - flags to control making added
       analyse-sample: added
       nway: updated to new config system

0.74 - bugfix in clip

0.73 - heatmap: slightly smarter
       clip: converted to new style
       treemaker no longer depends on Cython
       begin writing unit tests

0.72 - Tools now log command line invocation
       import: can import BAM files
       shrimp: shrimp-options: -h now works again 

0.71 - Fix bug that caused filter: to immediately throw an exception.
       count: --strand must now be specified explicitly.
       shrimp: per-sequence genbank files are now named consistently with sequence name
       nesoni R package moves plotting related things to plotting.R
