@@ -1,5 +1,7 @@
 
 0.86 - IOError now displays error message
+       Added "run-igv:"
+       "shrimp:" sets read group and sample in BAM file
 
 0.85 - update "fisher:" to work again
 
